--- a/src/components/switch/index.less
+++ b/src/components/switch/index.less
@@ -32,4 +32,14 @@
     }
   }
 }
+// 选中样式
+.is-checked {
+  .my-switch_core{
+    border-color: #409eff;
+    background-color: #409eff;
+    .my-switch_button {
+      transform: translateX(20px);
+    }
+  }
+}
 
